# advanced-rag-milvus

./: .coverage  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  CodeOrganizationBP.md  DEPLOYMENT.md  DevPlaybook.md  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  chat.db  config.template.yaml  dev.db  docker-compose.yml  example_usage.py  mypy.ini  perf_smoke.py  pyproject.toml  pytest.ini  requirements.txt  service.py  setup.py  test_advanced_rag.py  test_extended.py  uvicorn.out  verify_optimizations.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  mutation.yml  perf-smoke.yml  tdd-gate.yml
advanced_rag/: __init__.py  chunking.py  circuit_breaker.py  compliance.py  constants.py  db_pool.py  diagnostics.py  embedding_cache.py  evaluation.py  exceptions.py  indexing.py  pipeline.py  retrieval.py
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: SLO.md
docs/runbooks/: rag-api.md
infra/terraform/aws/: main.tf  outputs.tf  variables.tf
observability/: otel-collector-config.yaml
observability/dashboards/: rag_overview.json
scripts/: deploy_aws.sh  migrate.sh
src/advanced_rag/: __init__.py  circuit_breaker.py  compliance.py  config.py  constants.py  db_pool.py  decomposition.py  embedding_cache.py  evaluation.py  exceptions.py  experiments.py  indexing.py  learned_adapter.py  pipeline.py  query_rewriting.py  ranker.py  retrieval.py  semantic_enrichment.py
static/: app.js  index.html
tests/: __init__.py  test_circuit_breaker.py  test_constants.py  test_db_pool.py  test_embedding_cache.py  test_exceptions.py  test_new_modules.py
